[project]
name = "plot-ecg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ecg-plot>=0.2.8",
    "imgaug>=0.3.0",
    "imutils>=0.5.4",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
    "wfdb>=4.3.0",
]
